Bug 1838250 - Avoid O(n^2) behavior in nsTextFrame::GetCharacterRectsInRange. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D183382